# escape-time-fracta

./: .gitignore  README.md  deep-zoom-worker.js  fractal-render-worker.js  fractal-webgpu.js  index.html  main.js  naga-1.0.0.tgz  package-lock.json  package.json
.github/workflows/: deploy-pages.yml
fractal-wasm/: Cargo.toml  GPU.md  PERTURBATION.md
fractal-wasm/src/: lib.rs  perturb.rs
scripts/: dev-https.mjs
tests/: perturb-regression.md
