[package]
name = "fractal-wasm"
version = "0.1.0"
edition = "2021"
authors = ["escape-time-fracta"]
license = "GPL-3.0"
repository = "https://github.com/BenManifold/escape-time-fracta"
description = "WASM helpers and f64 escape-time / perturbation render code for the escape-time-fracta app (palette LUT in browser; full pixel path for tooling)"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

[profile.release]
opt-level = 3
lto = true
